css/main.css
/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */


html, body {
  height: 100%;
  margin: 0;
  padding: 0;
}

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

textarea {
    resize: vertical;
}

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ==========================================================================
   Author's custom styles
   ========================================================================== */
#toggle {
    display: none;
    color: #eee;
    text-align: center;
}

#nav {
    background-color: #333;
}

#loadingData {
    display: none;
    color: white;
    text-align: center;
    margin-top: 20px;
}

.sidebar {
     position: relative;
}

.logo {
    display: none;
}

.title {
  font-size: 14px;
  line-height: 50px;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 7px;
  color: #eee;
  border-bottom: 1px solid #222;
  background: #2a2a2a;
  margin: 0;
  padding: 0px 10px 0px 10px;

}

.item {
    margin: 0;
}

.item li {
  position: relative;
  display: block;
  padding: 15px 15px 15px 0px;
  font-size: 12px;
  color: #eee;
  border-bottom: 1px solid #222;
}


/* ==========================================================================
   Media Queries
   ========================================================================== */
 @media only screen and (max-width: 1350px) {
     .title {
         font-size: 10px;
         letter-spacing: 5px;
     }

 @media only screen and (max-width: 1000px) {
     .logo {
         display: flex;
         margin: auto;
     }
     .title {
         display: none;
     }
 }



@media only screen and (max-width: 768px) {

    #nav {
        width: 50px;
    }

    #toggle {
        display: block;
    }

    .sidebar {
        position: absolute;
        background-color: #333;
        -webkit-transform: translate(-300px, 0);
        transform: translate(-300px, 0);
        z-index: 1;
    }

    .open {
      -webkit-transform: translate(0, 0);
      transform: translate(0, 0);
    }

@media print,
       (-o-min-device-pixel-ratio: 5/4),
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 120dpi) {

}

/* ==========================================================================
   Helper classes
   ========================================================================== */

.hidden {
    display: none !important;
    visibility: hidden;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

.invisible {
    visibility: hidden;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   Print styles
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important;
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

